Closed Bug 513342 Opened 14 years ago Closed 14 years ago

crash while browsing to and from a geolocation page

Categories

(Core :: DOM: Geolocation, defect)

ARM
Windows Mobile 6 Professional
defect
Not set
normal

Tracking

()

VERIFIED FIXED
mozilla1.9.2b1
Tracking Status
status1.9.2 --- beta1-fixed

People

(Reporter: jmaher, Assigned: dougt)

Details

Attachments

(1 file, 1 obsolete file)

I do this:
1) browse to www.mozilla.org
2) browse to http://people.mozilla.com/~jmaher/wifi_text.html
3) click "share"
4) observe your geolocation data
6) browse to m.cnn.com
7) hit the back button 3 times 
   * observe you get a new geolocation notification bar
8) now that you are back at mozilla.org, hit the forward button
9) click "share" in the geolocation notification prompt
10) observe the crash


this is with 20090828 respin of 1.9.2 alpha3 rc for winmo
Assignee: nobody → doug.turner
Attached patch patch v.1 (obsolete) — Splinter Review
be more careful about nulling stuff out when you freelibrary.
Attachment #397713 - Flags: review?(bugmail)
the maemo stuff should have been removed in another bug.
Comment on attachment 397713 [details] [diff] [review]
patch v.1

ignore whitespace.
Attachment #397713 - Flags: review?(bugmail) → review+
Comment on attachment 397713 [details] [diff] [review]
patch v.1


>-WinMobileLocationProvider::WinMobileLocationProvider():
>-mGPSDevice(nsnull), mHasSeenLocation(PR_FALSE)
>+WinMobileLocationProvider::WinMobileLocationProvider()
>+: mGPSDevice(nsnull), 
nit, move ':' up one line


> NS_IMETHODIMP WinMobileLocationProvider::Startup()
> {
>-  if (!mGPSDevice) {
>+  if (!mGPSInst) {
>     mGPSInst = LoadLibraryW(L"gpsapi.dll");

do all devices have this dll?  If not, we should probably not try to open it repeatedly  

>   
>   if (mGPSDevice)
>     mCloseDevice(mGPSDevice);
>+
>+  mGPSDevice = nsnull;
>   
is it possible for mGPSDevice to be non null with mCloseDevice null?  I don't think so, but wanted to ask.

>-
>-  // if NS_MAEMO_LOCATION, see if we should try the MAEMO location provider
>-#ifdef NS_MAEMO_LOCATION
>-  provider = new MaemoLocationProvider();
>-  if (provider)
>-    mProviders.AppendObject(provider);
>-#endif

Why are you removing this?
> Why are you removing this?

We removed the Maemo provider a while ago but I forgot to remove this part.
Attached patch patch v.2Splinter Review
Attachment #397713 - Attachment is obsolete: true
Attachment #397933 - Flags: review?(bugmail)
Attachment #397933 - Flags: review?(bugmail) → review+
Assignee: doug.turner → nobody
Component: Windows Mobile → Geolocation
Product: Fennec → Core
QA Contact: mobile-windows → geolocation
Attachment #397933 - Flags: approval1.9.2?
http://hg.mozilla.org/mozilla-central/rev/56e80a2070a6
Status: NEW → RESOLVED
Closed: 14 years ago
Resolution: --- → FIXED
Attachment #397933 - Flags: approval1.9.2? → approval1.9.2+
status1.9.2 = beta-1-fixed per comment 8.
Target Milestone: --- → psm2.0
Target Milestone: psm2.0 → mozilla1.9.2b1
verified FIXED On build:

Mozilla/5.0 (Windows; U; WindowsCE 5.2; en-US; rv:1.9.2b1pre) Gecko/20090923 Fennec/1.0a3
Status: RESOLVED → VERIFIED
Assignee: nobody → doug.turner
You need to log in before you can comment on or make changes to this bug.