[Bug 513342] crash while browsing to and from a geolocation page. r=blassey